--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/code.png" />
     <script
-      id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/5e8f1db9cb0af4c169bb7126a/1690cde44f508ac4feb3d0373.js");</script>
+      id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }
+      (document, "script", "https://chimpstatic.com/mcjs-connected/js/users/5e8f1db9cb0af4c169bb7126a/1690cde44f508ac4feb3d0373.js");</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding with Samanja</title>
   </head>
