meta tag image changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Coding with Samanja">
     <meta property="og:description" content="undefined">
-    <meta property="og:image" content="/src/assets/background.jpg">
+    <meta property="og:image" content="https://media.istockphoto.com/id/1294521676/photo/programming-code-abstract-technology-background-of-software-developer-and-computer-script.jpg?b=1&s=170667a&w=0&k=20&c=ehWomY1hSv3JUibQuEJ4xgs98-aK6EZPh4Rb_IyGzjg=">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -19,7 +19,7 @@
     <meta property="twitter:url" content="https://samanja.dev/">
     <meta name="twitter:title" content="Coding with Samanja">
     <meta name="twitter:description" content="undefined">
-    <meta name="twitter:image" content="/src/assets/background.jpg">
+    <meta name="twitter:image" content="https://media.istockphoto.com/id/1294521676/photo/programming-code-abstract-technology-background-of-software-developer-and-computer-script.jpg?b=1&s=170667a&w=0&k=20&c=ehWomY1hSv3JUibQuEJ4xgs98-aK6EZPh4Rb_IyGzjg=">
     
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link rel="icon" type="image/png" href="/code.png" />
