--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Coding with Samanja">
     <meta property="og:description" content="undefined">
-    <meta property="og:image" content="/src/background.jpg">
+    <meta property="og:image" content="window.location.pathname+window.location.search">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
