building meta data

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:url" content="https://samanja.dev/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Coding with Samanja">
-    <meta property="og:description" content="undefined">
-    <meta property="og:image" content="window.location.pathname+window.location.search">
+    <meta property="og:description" content="Coding with Samanja for all levels of Coders">
+    <meta property="og:image" content="https://media.istockphoto.com/id/1294521676/photo/programming-code-abstract-technology-background-of-software-developer-and-computer-script.jpg?b=1&s=170667a&w=0&k=20&c=ehWomY1hSv3JUibQuEJ4xgs98-aK6EZPh4Rb_IyGzjg=">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
