--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- HTML Meta Tags -->
     <title>Coding with Samanja</title>
-    <meta name="description" content="undefined">
+    <meta name="description" content="Coding with Samanja for all levels of Coders">
     
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://samanja.dev/">
