--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Coding with Samanja">
     <meta property="og:description" content="undefined">
-    <meta property="og:image" content="https://i.pinimg.com/736x/d0/25/0b/d0250b7b3bef2042996d08448a5329ad.jpg">
+    <meta property="og:image" content="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-developer-picture-id1224500457?b=1&k=20&m=1224500457&s=612x612&w=0&h=oTvUxf6T0pKuQA5XRuePuTBxQTmB3BXWzpIl5u2iy44=">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
