--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <!-- HTML Meta Tags -->
-    <meta name="description" content="Coding with Samanja for all levels of Coders">
-    
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://samanja.dev/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Coding with Samanja">
-    <meta property="og:description" content="Coding with Samanja for all levels of Coders">
-    <meta property="og:image" content="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-developer-picture-id1224500457?b=1&k=20&m=1224500457&s=612x612&w=0&h=oTvUxf6T0pKuQA5XRuePuTBxQTmB3BXWzpIl5u2iy44=">
-    
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="samanja.dev">
-    <meta property="twitter:url" content="https://samanja.dev/">
-    <meta name="twitter:title" content="Coding with Samanja">
-    <meta name="twitter:description" content="Coding with Samanja for all levels of Coders">
-    <meta name="twitter:image" content="https://samanja.dev/">
+  <!-- HTML Meta Tags -->
+  <title>Coding with Samanja</title>
+  <meta name="description" content="Coding with Samanja for all levels of Coders">
+  
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://samanja.dev/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Coding with Samanja">
+  <meta property="og:description" content="Coding with Samanja for all levels of Coders">
+  <meta property="og:image"
+    content="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-developer-picture-id1224500457?b=1&k=20&m=1224500457&s=612x612&w=0&h=oTvUxf6T0pKuQA5XRuePuTBxQTmB3BXWzpIl5u2iy44=">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="samanja.dev">
+  <meta property="twitter:url" content="https://samanja.dev/">
+  <meta name="twitter:title" content="Coding with Samanja">
+  <meta name="twitter:description" content="Coding with Samanja for all levels of Coders">
+  <meta name="twitter:image"
+    content="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-developer-picture-id1224500457?b=1&k=20&m=1224500457&s=612x612&w=0&h=oTvUxf6T0pKuQA5XRuePuTBxQTmB3BXWzpIl5u2iy44=">
+  
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         <title>Coding with Samanja</title>
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
