--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
   <meta name="twitter:title" content="Coding with Samanja">
   <meta name="twitter:description" content="Coding with Samanja for all levels of Coders">
   <meta name="twitter:image"
-    content="https://cdn.dribbble.com/users/1787323/screenshots/7123758/media/5c2b6b54ae3d5eabd56679e63ed83eaa.png?compress=1&resize=400x300&vertical=top">
+    content="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-developer-picture-id1224500457?b=1&k=20&m=1224500457&s=612x612&w=0&h=oTvUxf6T0pKuQA5XRuePuTBxQTmB3BXWzpIl5u2iy44=">
   
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link rel="icon" type="image/png" href="/code.png" />
