--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <link rel="icon" type="image/png" href="/code.png" />
+    <link rel="icon" type="image/jpg" href="/brackets.jpg" />
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding with Samanja</title>
