--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link rel="icon" type="image/jpg" href="/brackets.jpg" />
-   
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding with Samanja</title>
   </head>
