--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Coding with Samanja">
   <meta property="og:description" content="Coding with Samanja for all levels of Coders">
   <meta property="og:image"
-    content="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-developer-picture-id1224500457?b=1&k=20&m=1224500457&s=612x612&w=0&h=oTvUxf6T0pKuQA5XRuePuTBxQTmB3BXWzpIl5u2iy44=">
+    content="https://scontent-lga3-2.xx.fbcdn.net/v/t39.30808-6/324185472_737625190752462_5130012442328151286_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=730e14&_nc_ohc=FyXdC1howNIAX-3P08i&_nc_ht=scontent-lga3-2.xx&oh=00_AfBC6shRBShYYhbicpNux8pkY7Saecfudey206Nlw2N7dQ&oe=63C15842">
   
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <link rel="icon" type="image/jpg" href="/brackets.jpg" />
+    <link rel="icon" type="image/jpg" href="/code.png" />
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding with Samanja</title>
