every button added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <!-- HTML Meta Tags -->
   <!-- HTML Meta Tags -->
+  <style>
+    .material-symbols-outlined {
+      font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
+    }
+  </style>
   <title>Coding with Samanja</title>
   <meta name="description" content="Coding with Samanja for all levels of Coders">
-  
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://samanja.dev/">
   <meta property="og:type" content="website">
