--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <link rel="icon" type="image/jpg" href="/code.png" />
+    <link rel="icon" type="image/jpg" href="/logo1.png" />
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coding with Samanja</title>
+    <title >Coding with Samanja</title>
   </head>
   <body>
     <div id="app"></div>
